package patterns.composite;

import java.math.BigDecimal;

interface Expense {
  BigDecimal getTotalExpense();
}
